--- a/client/src/Global.css
+++ b/client/src/Global.css
@@ -47,11 +47,10 @@
 }
 
 form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-form input { border: 0; padding: 10px; width: 65%; margin-right: .5%; }
-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-#messages { list-style-type: none; margin: 0; padding: 0; }
-#messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: #eee; }
+form input { border: 0; padding: 10px; width: 63%; margin-right: .5%; }
+form button { width: 9%; background: #1abc9c; color: white; border: none; padding: 10px; }
+
+.message:nth-child(odd) { background: #eee; }
 
 .admin-button-div{
     margin-top: 50px;
@@ -69,6 +68,15 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
   margin-top: 10%
 }
 
+.available-users{
+    text-align: center;
+    height: 30px;
+    border: 1px solid black;
+    background: #1abc9c;
+    color: white;
+    padding-top: 10px;
+}
+
 .height-50px{
   height: 50px;
 }
@@ -84,4 +92,47 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 .logout-button{
   padding-top: 6%;
   padding-right: 1%;
+}
+
+.pointer{
+  cursor: pointer;
+}
+
+.message{
+  height: 20px;
+  padding-top: 5px;
+}
+
+p{
+  margin: 0;
+  padding-left: 5px;
+}
+
+.login-box{
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    border: 1px solid;
+}
+
+.selected{
+  background: #1abc9c;
+  color: white;
+}
+
+.none{
+  background: white;
+  color: black;
+}
+
+.users-div{
+  border: 1px solid;
+  border-radius: 5px;
+}
+
+.user-div{
+    height: 25px;
+    border: 1px solid;
+    border-radius: 5px;
+    padding-top: 5px;
 }
